<resources>
    <string name="app_name">CropDoc</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nom_boto_foto">Analize Photo</string>
    <string name="nom_select_foto">Load Picture</string>
    <string name="confirm_picture">Confirm Picture</string>
    <string name="select">Select</string>
    <string name="add_image">Add Image</string>
    <string name="predict_image">Predict Image</string>
    <string name="connect_to_lg">Connect To LG</string>
    <string name="shutdown">Shutdown</string>
    <string name="relaunch">Relaunch</string>
    <string name="connect">Connect</string>
    <string name="reboot">Reboot</string>
    <string name="location">Add Location</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main4">MainActivity4</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="latitude">Set Latitude and Longitude</string>
    <string name="longitude">Longitude</string>
    <string name="save_location">Save Location</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_marker">Add Marker</string>
    <string name="title_activity_maps_terrain">MapsActivityTerrain</string>
    <string name="reset_markers">Reset Markers</string>
    <string name="save_terrain">Save Terrain</string>
    <string name="select_terrain">Select Terrain</string>
    <string name="create_terrain">Create Terrain</string>
    <string name="send_kml">Send KML</string>
    <string name="startorbit">Start Orbit</string>
    <string name="stop_orbit">Stop Orbit</string>
    <string name="send_kmls">Send Kmls</string>
    <string name="about">About</string>
    <string name="clean_kml">Clean Kml</string>
    <string name="terrain_name">Terrain Name</string>
    <string name="take_picture">Take picture</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="send_demos">Send demos</string>
</resources>